ansible/openemr-manifests/04-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
    app.kubernetes.io/component: database
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: openemr
    app.kubernetes.io/runtime: mariadb
  name: mariadb
  namespace: openemr
spec:
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    app: mariadb
  type: ClusterIP
