ansible/openemr-manifests/06-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: openemr
  name: redis
  namespace: openemr
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
